--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ h2{
 
 /*Mobile view*/
 @media screen and (max-width: 750px){
+
+    hr{
+        width: 90%;
+    }
     #header{
         width: 100%;
         height: 2.5em;
@@ -49,11 +53,18 @@ h2{
     }
 
     #mobile-nav{
-        width: 100%;
+        width: 90%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         list-style: none;
+        margin: 3% auto 1% auto;
+        text-align: center;
+    }
+
+    #mobile-nav li{
+        margin: 0 auto;
+        padding: 0 .4em 0 .4em;
     }
     
 
@@ -126,6 +137,7 @@ h2{
         width: 95%;
         height: 3.6em;
         margin: 0 auto 0 auto;
+        box-shadow: .2em .2em .5em black;
     }
 
     #learning-section section h3{
